[project]
name = "langfuse-poc-part2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.9",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langfuse>=3.13.0",
    "langgraph>=1.0.8",
    "serpapi>=0.1.5",
]
